--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -1,5 +1,5 @@
 # Name of your application. Used to uniquely configure containers.
-service: keypair-media
+service: key-pair-media
 
 # Name of the container image.
 image: pbmarcano/keypair-media
@@ -62,7 +62,7 @@ aliases:
 # Use a persistent storage volume.
 #
 volumes:
-  - "key_pair_media_storage:/app/storage"
+  - "key_pair_media_storage:/rails/storage"
 
 # Bridge fingerprinted assets, like JS and CSS, between versions to avoid
 # hitting 404 on in-flight requests. Combines all files from new and old
